# llm-zoomcamp-2025

./: README.md  pyproject.toml
01-intro/: 00-environment.ipynb
