[project]
name = "llm-zoomcamp-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "elasticsearch>=9.0.2",
    "ipykernel>=6.29.5",
    "notebook==7.1.2",
    "openai>=1.86.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.7.0",
    "tdqm>=0.0.1",
]
